docs: make sure images do not overflow on mobile

--- a/docs/docgen/src/stylesheets/components/_documentation.sass
+++ b/docs/docgen/src/stylesheets/components/_documentation.sass
@@ -78,6 +78,9 @@ $offset-height: 60px
     padding-left: 60px
     padding-top: 60px
 
+    p img
+      max-width: 100%
+
     p, li
       color: rgba(32, 28, 56, 0.8)
       line-height: 2
